--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -18,6 +18,11 @@
     justify-content: space-between;
 }
 
+.footer-content img {
+    height: auto;
+    width: 10rem;
+}
+
 .footer-content h1 {
     font-size: 24px;
     padding-bottom: 25px;
@@ -128,15 +133,20 @@
         /* border: solid red; */
         height: 90%;
     }
+
+    .footer-content img {
+        height: auto;
+        width: 7rem;
+    }
     
     .footer-content h1 {
-        font-size: 24px;
+        font-size: 18px;
         padding-bottom: 25px;
         color: #fff;
     }
 
     .footer-content p {
-        font-size: 18px;
+        font-size: 16px;
         padding-bottom: 25px;
     }
     
@@ -154,7 +164,7 @@
     
     .quick-links-content a {
         display: flex;
-        font-size: 18px;
+        font-size: 16px;
         padding-top: 5px;
         text-decoration: none;
         flex-direction: column;
@@ -173,7 +183,7 @@
         display: flex;
         color: white;
         align-self: center;
-        font-size: 18px;
+        font-size: 14px;
         padding: 10px;
     }
     
@@ -182,7 +192,7 @@
         display: flex;
         color: white;
         align-self: center;
-        font-size: 20px;
+        font-size: 14px;
     }
     
     
@@ -197,17 +207,17 @@
     }
     
     .followus-icon {
-        padding-top: 10px;
+        padding-top: 0;
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
     
     }
     
     .followus-icon .fa-brands {
         color: white;
-        font-size: 30px;
-        padding: 0;
+        font-size: 20px;
+        padding: 20px;
     }
     
     .copyrigt-content {
@@ -219,8 +229,8 @@
     
     .copyrigt-content h6 {
         text-align: center;
-        padding-top: 30px;
-        font-size: 20px;
+        padding-top: 20px;
+        font-size: 13px;
         color: white;
     }
 
