--- a/src/components/pages/appointment/Styles/AppointmentLogItems.css
+++ b/src/components/pages/appointment/Styles/AppointmentLogItems.css
@@ -65,6 +65,117 @@
   .action-button:hover {
     background-color: #c0392b; /* Darker red color on hover */
   }
+
+  /*AppoointmentHistory css*/
+
+  :where(.css-dev-only-do-not-override-1g853jt)[class^="ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class*=" ant-modal"] {
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+    font-size: 14px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal-root .ant-modal-mask {
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  pointer-events: none;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal-root .ant-modal-wrap {
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  overflow: auto;
+  outline: 0;
+  -webkit-overflow-scrolling: touch;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt)[class^="ant-modal"] [class^="ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class*=" ant-modal"] [class^="ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class^="ant-modal"] [class*=" ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class*=" ant-modal"] [class*=" ant-modal"] {
+  box-sizing: border-box;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-content {
+  position: relative;
+  background-color: #ffffff;
+  background-clip: padding-box;
+  border: 0;
+  border-radius: 8px;
+  box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+  pointer-events: auto;
+  padding: 20px 24px;
+  width: 60%;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-close {
+  position: absolute;
+  top: 17px;
+  inset-inline-end: 17px;
+  z-index: 1010;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.45);
+  font-weight: 600;
+  line-height: 1;
+  text-decoration: none;
+  background: transparent;
+  border-radius: 4px;
+  width: 22px;
+  height: 22px;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  transition: color 0.2s,background-color 0.2s;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-header {
+  color: rgba(0, 0, 0, 0.88);
+  background: #ffffff;
+  border-radius: 8px 8px 0 0;
+  margin-bottom: 8px;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-title {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.88);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-body {
+  font-size: 14px;
+  line-height: 1.5714285714285714;
+  word-wrap: break-word;
+}
+
+.ant-modal-body {
+  max-height: 500px;
+  overflow-y: auto;
+  overflow-x: auto !important;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
   /* Media query for responsiveness */
   @media (max-width: 768px) {
     .appointment-log-item {
@@ -137,6 +248,108 @@
       border: none;
       border-radius: 5px;
     }
+
+      /*AppoointmentHistory css*/
+
+  :where(.css-dev-only-do-not-override-1g853jt)[class^="ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class*=" ant-modal"] {
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+    font-size: 14px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    margin-top: 30px;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal-root .ant-modal-mask {
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  pointer-events: none;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal-root .ant-modal-wrap {
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  overflow: auto;
+  outline: 0;
+  -webkit-overflow-scrolling: touch;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt)[class^="ant-modal"] [class^="ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class*=" ant-modal"] [class^="ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class^="ant-modal"] [class*=" ant-modal"], :where(.css-dev-only-do-not-override-1g853jt)[class*=" ant-modal"] [class*=" ant-modal"] {
+  box-sizing: border-box;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-content {
+  position: relative;
+  background-color: #ffffff;
+  background-clip: padding-box;
+  border: 0;
+  border-radius: 8px;
+  box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+  pointer-events: auto;
+  padding: 20px 24px;
+  width: 90dvw;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-close {
+  position: absolute;
+  top: 17px;
+  inset-inline-end: 17px;
+  z-index: 1010;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.45);
+  font-weight: 600;
+  line-height: 1;
+  text-decoration: none;
+  background: transparent;
+  border-radius: 4px;
+  width: 22px;
+  height: 22px;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  transition: color 0.2s,background-color 0.2s;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-header {
+  color: rgba(0, 0, 0, 0.88);
+  background: #ffffff;
+  border-radius: 8px 8px 0 0;
+  margin-bottom: 8px;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-title {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.88);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+
+:where(.css-dev-only-do-not-override-1g853jt).ant-modal .ant-modal-body {
+  font-size: 14px;
+  line-height: 1.5714285714285714;
+  word-wrap: break-word;
+}
+
+.ant-modal-body {
+  max-width: 100dvw;
+  max-height: 500dvh !important;
+  overflow-y: auto;
+  overflow-x: auto;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 
   }
   
