--- a/src/components/admin/components/styles/AdminContent.css
+++ b/src/components/admin/components/styles/AdminContent.css
@@ -1,22 +1,79 @@
 .form-container {
-    max-width: 400px;
-    margin: 20px auto;
-  }
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-container h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.file-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.file-preview {
+  margin-top: 10px;
+}
+
+.thumbnail-preview {
+  max-width: 100%;
+  max-height: 200px;
+  border-radius: 4px;
+}
+
+.form-container label {
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.input-field,
+.textarea-field {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.textarea-field {
+  resize: vertical;
+  height: 150px; /* Adjust the height as needed */
+}
+
+.submit-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+.ActionBtn {
+  display: flex;
   
-  .input-field {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-  
-  .submit-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+}
+
 
   .tab-buttons {
     display: flex;
@@ -35,3 +92,14 @@
     background-color: #ddd;
   }
   
+  @media (min-width: 768px) {
+    .form-container form {
+      flex-direction: row;
+      align-items: flex-start;
+    }
+  
+    .form-container label {
+      flex: 1;
+      margin-right: 20px;
+    }
+  }
