--- a/src/components/Auth/Style/signup.css
+++ b/src/components/Auth/Style/signup.css
@@ -12,7 +12,56 @@
     z-index: 1;
     padding:2rem 7%;
  }
+.user-signup-check-box {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 20px;
+}
 
+.user-signup-check-box input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+.user-signup-check-box.viewed input:disabled + .checkmark {
+  background-color: #ccc;
+  cursor: not-allowed;
+  /* make notes */  
+
+}
+
+ .user-signup-form-control.rm {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.terms-link {
+  font: 1em sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  color: #082342;
+  cursor: pointer;
+}
+
+.scroll-wrapper {
+  max-height: 200px; /* Adjust the height according to your design */
+  overflow-y: auto;
+  border: 1px solid #ccc; /* Add a border to the scroll wrapper for better visibility */
+  padding: 10px;
+}
 
 .title {
   font-family: 'montserrat';
